argocd/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/name: LoadBalancer
  name: alb
spec:
  controller: eks.amazonaws.com/alb
