argocd/patch_argocd-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/success-codes: "200"
