argocd/ui-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argogrpc
  labels:
    app: argogrpc
  annotations:
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/healthcheck-path: /grpc.health.v1.Health/Check
    alb.ingress.kubernetes.io/success-codes: "0"
  namespace: argocd
spec:
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
  - port: 443
    name: "443"
    targetPort: 8080
  sessionAffinity: None
  type: NodePort
